crates/testing/sysml-spec-tests/tests/snapshots/identity_invariants__cross_transport_coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/identity_invariants.rs
expression: bundle
---
{
  "fixture": "coffee_views",
  "only_in_lsp": [],
  "only_in_rest": [],
  "shared": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ],
  "transport_lsp": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ],
  "transport_rest": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ]
}
